[package]
name = "delivery_station"
version = "0.1.3"
authors = ["vinoca <vinoca@vinoca.org>"]
edition = "2018"

[dependencies]
hyper = "0.14.15"
hyper-tls = "0.5.0"
once_cell = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
serde_json = "1.0.72"
serde_urlencoded = "0.7.0"
tokio = { version = "1.14.0", features = ["macros", "fs", "rt-multi-thread"] }
http = "0.2.5"
routerify = "2.2.0"
openssl = "0.10.38"
hex = "0.4.3"
percent-encoding = "2.1.0"
chrono = "0.4.19"
blocking = "1.1.0"
ssh2 = "0.9.3"
anyhow = "1.0.51"
rand = "0.8.4"
tera = "1.15.0"
log = "0.4.14"
env_logger = "0.9.0"
